# custom_layers

./: .flake8  .gitignore  .pre-commit-config.yaml  .style.yapf  README.md  build.sh  gen_docs.sh  generate_docs.sh  install-pre-commit.sh  mypy.ini  setup.cfg  setup.py
.github/workflows/: ci.yaml  custom_layers.yaml  publish_release.yml  tf_test.yaml
custom_layers/: __init__.py  version.py
custom_layers/keras/: __init__.py  custom_objects.py
custom_layers/keras/object_detection/: box_utils.py  faster_rcnn_box_decode.py  score_converter.py  ssd_post_process.py
custom_layers/keras/tests/: common.py
custom_layers/test/tf/: __init__.py  test_box_decode.py  test_ssd_post_process.py
custom_layers/tf/: __init__.py  box_decode.py  box_utils.py  custom_objects.py  ssd_post_process.py
custom_layers/tf/object_detection/: __init__.py  box_utils.py  faster_rcnn_box_decode.py  score_converter.py  ssd_post_process.py
docs/: index.html
docs/sony_custom_layers/: keras.html  pytorch.html
pdoc/template/: module.html.jinja2
sony_custom_layers/: __init__.py  import_util.py  version.py
sony_custom_layers/common/: box_util.py
sony_custom_layers/keras/: __init__.py  base_custom_layer.py  custom_objects.py
sony_custom_layers/keras/object_detection/: __init__.py  faster_rcnn_box_decode.md  faster_rcnn_box_decode.py  ssd_post_process.py  (+1 more)
sony_custom_layers/pytorch/: __init__.py  custom_layer.py  custom_lib.py
sony_custom_layers/util/: __init__.py  import_util.py  test_util.py
tutorials/pytorch/: custom_layer.ipynb  multiclass_nms_custom_layer_example.ipynb
(+37 files in other folders)
