[metadata]
name = sony-custom-layers
version = attr: sony_custom_layers.version.__version__
description = Sony Custom Layers package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.8,<=3.11
install_requires =
    tensorflow>=2.10,<2.14
    numpy
packages=find:

[options.packages.find]
include =
    sony_custom_layers*
exclude =
    *tests*
